--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ yarn-error.log*
 *.sln
 *.sw?
 *.bak
+*.pack
+*.pack.old
 
 # Environment Files
 .env
@@ -34,3 +36,54 @@ yarn-error.log*
 .Trashes
 ehthumbs.db
 Thumbs.db
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack.old
+*.old
+*.json
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack.old
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/9.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/8.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/7.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/6.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/5.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/4.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/3.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/10.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/1.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/0.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack.old
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/9.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/8.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/7.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/6.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/5.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/4.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/3.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/10.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/1.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/0.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack.old
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/9.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/8.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/7.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/6.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/5.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/4.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/3.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/10.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/1.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/0.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack.old
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/index.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/9.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/8.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/7.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/6.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/5.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/4.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/3.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/10.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/1.pack
+.angular/cache/16.1.3/angular-webpack/399ab27131043301c38ce4a7c387f829f0b5fe15/0.pack
